# hivetuilib

./: Cargo.toml  LICENSE
hivetuilib/: Cargo.toml
hivetuilib-ai/: Cargo.toml  tree_depths_log
hivetuilib-ai/src/: algorithm.rs  engine_stepper.rs  lib.rs  params.rs  rater.rs  search_tree_state.rs
hivetuilib-board/: Cargo.toml
hivetuilib-board/src/concrete_boards/: mod.rs  vec_board.rs
hivetuilib-board/src/search/: mod.rs
hivetuilib-board/src/structures/: direction_structures.rs  directions.rs
hivetuilib/src/: trait_definitions.rs  utility.rs
hivetuilib/src/decision_impl/: lazy_decision.rs  mapped_decision.rs  vec_context.rs  vec_decision.rs
hivetuilib/src/engine/: abstract_engine.rs
src/: board.rs  engine_a.rs  engine_b.rs  lib.rs  tgp.rs
src/board/: board_impl.rs  directions.rs  hypothetical.rs  matrix_board.rs  open_board.rs  search.rs  search_tree.rs  structures.rs  vec_board.rs
tgp/: Cargo.toml
tgp-ai/: Cargo.toml
tgp-ai/src/: algorithm.rs  engine_stepper.rs  lib.rs  params.rs  rater.rs  search_tree_state.rs
tgp-board/: Cargo.toml
tgp-board/src/: field.rs  hypothetical.rs  index_map.rs  lib.rs  trait_definitions.rs
tgp-board/src/concrete_boards/: matrix_board.rs  open_board.rs  vec_board.rs
tgp-board/src/search/: mod.rs  searching_set.rs  searching_tree.rs
tgp-board/src/structures/: adjacency_set.rs  direction_structures.rs  directions.rs  mod.rs
tgp/src/: dispatch.rs  engine.rs  lib.rs  tgp.rs  trait_definitions.rs  utility.rs
tgp/src/decision_impl/: flat_decision.rs  lazy_decision.rs  mapped_decision.rs  mod.rs  (+3 more)
(+7 files in other folders)
