[package]
name = "hivetuilib-ai"
version = "0.1.0"
authors = ["Nikolai Maas <nikolai.maas@mailbox.org>"]
edition = "2021"
description = "Generic minimax AI algorithm for hivetuilib."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hivetuilib = { path = "../hivetuilib" }
