[package]
name = "hivetuilib-board"
version = "0.1.0"
authors = ["Nikolai Maas <nikolai.maas@mailbox.org>"]
edition = "2021"
description = "Common board types and search operations for board games."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
hashbrown = "0.11"
