[package]
name = "hivetuilib"
version = "0.1.0"
authors = ["Nikolai Maas <nikolai.maas@mailbox.org>"]
edition = "2021"
description = "Library for abstracting turn based games."
license = "MIT"
repository = "https://github.com/N-Maas/hivetuilib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
